--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://api.fontshare.com/v2/css?f[]=panchang@400&display=swap" rel="stylesheet">
-    <link href="https://api.fontshare.com/v2/css?f[]=melodrama@400&display=swap" rel="stylesheet">
+    <link
+      href="https://api.fontshare.com/v2/css?f[]=panchang@400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://api.fontshare.com/v2/css?f[]=melodrama@400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Stopwatch</title>
   </head>
@@ -30,9 +36,19 @@
         </p>
       </div>
       <div class="buttons">
-        <button id="start">Start</button>
-        <button id="stop">Stop</button>
-        <button id="reset">Reset</button>
+        <div class="btnRow1">
+          <button id="start">Start</button>
+          <button id="stop">Stop</button>
+          <button id="flag">Flag</button>
+        </div>
+        <div class="btnRow2">
+          <button id="reset">Reset</button>
+        </div>
+      </div>
+      <div class="flagOutput">
+        <h3 id="flagHeading">Flags:</h3>
+        <ol>
+        </ol>
       </div>
     </div>
     <script src="main.js"></script>
