added: flag removal

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="flagOutput">
         <h3 id="flagHeading">Flags:</h3>
-        <ol>
+        <ol id="list">
         </ol>
       </div>
     </div>
